------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.2 branch)

------------------------------------------------------------------------------


Interchange 5.3.0 not yet released.

Core
----

* Fix X-Track headers so that they will always be canonical.

* Fixed bug that prevented catalog-level Sub definitions from being
  recognized in CodeDef Routine directives.

* Add support for uploaded files in IC-in-mod_perl server mode,
  supplied by Spencer Christensen <schristensen@backcountry.com>.

* Add more file tests than -f for [if file].

	[if file-s catalog.cfg > 10000]
		catalog.cfg size is greater than 10000
	[else]
		catalog.cfg size is not greater than 10000
	[/else]
	[/if]

	[if file-w catalog.cfg]
		catalog.cfg can be written
	[/if]

	[if file-T catalog.cfg]
		catalog.cfg is a text file
	[/if]

	[if file-B catalog.cfg]
		catalog.cfg is a binary file
	[/if]

	etc.

  The tests are standard Perl tests, supported are:

	A B d e f g l M r s T u w x

* Fix bug in Glimpse search that caused mv_substring_match never to work. 
  Glimpse only allows setting substring or full word matches per search, 
  not per word, so if any word is flagged as a substring match, the whole 
  search is. Otherwise, it's a full word match.

* Fix bug that prevented multiple-field searches from working, e.g.
  sf=15:16:17:18.

* Add table to [import] error message.

* Controlling Interchange (add,remove,jobs) doesn't stop despite of a 
  stale PID file and kills the script it runs from (Debian bug #256093)

UI
--

* Escape HTML tags within ITL test code output.

* Customer Mailing added to edit permissions page.

* Fix the long-standing "page [cgi mv_data_table] not found" error on
  return from meta_editor.

* Display "New item" in the HTML title of the item editor for new items.

Menu
----
