@@ -6,7 +6,8 @@
 ------------------------------------------------------------------------------
 
 
-Interchange 5.3.0 not yet released.
+Interchange 5.3.1 to be released 2005-01-25.
+
 
 Core
 ----
@@ -108,6 +109,9 @@ Payment
 
 * New Ezic module supplied by Mark Lipscombe <markl@gasupnow.com>.
 
+* New Business::OnlinePayment interface contributed by Ivan Kohler. See
+  http://420.am/business-onlinepayment/ for available modules.
+
 i18n
 ----
 
@@ -135,6 +139,12 @@ RPM
 ---
 
 * Install te editor for tab-delimited files into /usr/bin.
+
+
+------------------------------------------------------------------------------
+
+
+Interchange 5.3.0 released only in nightly builds and via CVS.
 
 
 ------------------------------------------------------------------------------
